--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -15,28 +15,55 @@
   </head>
   <body>
     <h1>WHO Visualization Project</h1>
-
+    <select id="variableDD" style="width: auto;"></select>
     <script type="text/javascript">
-      var width = 900;
-      var height = 600;
+     var width = 900;
+     var height = 600;
+     var who = "http://127.0.0.1:5050/test";
+     var projection = d3.geo.mercator();
+     var ds;
+     var keys = [];
+     var variableDD = d3.select("#variableDD");
 
-      var projection = d3.geo.mercator();
-      
-      var svg = d3.select("body").append("svg")
-          .attr("width", width)
-          .attr("height", height);
-      var path = d3.geo.path()
-          .projection(projection);
-      var g = svg.append("g");
-      
-      d3.json("/json/world-110m2.json", function(error, topology) {
-          g.selectAll("path")
-            .data(topojson.object(topology, topology.objects.countries)
-                .geometries)
-          .enter()
-            .append("path")
-            .attr("d", path)
-      });
+     //var svg = d3.select("body").append("svg")
+     //            .attr("width", width)
+     //            .attr("height", height);
+
+     var path = d3.geo.path()
+                  .projection(projection);
+
+     //var g = svg.append("g");
+     
+     function displayDropDown(){
+         variableDD.on("change", function(d) {
+             var value = d3.select(this).property("value");
+             alert(value);
+         });
+         variableDD.selectAll("option")
+             .data(keys)
+             .enter()
+             .append("option")
+                   .attr("value", function(d) {
+                       return d;})
+                   .text(function (d) { return d; });
+     }
+
+     d3.json(who, function(error, data){
+         if (error){ console.log(error); }
+         else {console.log(data); ds = data;}
+         for(var k in ds[1]) keys.push(k);
+
+         displayDropDown();
+     });
+
+//     d3.json("/json/world-110m2.json", function(error, topology) {
+//         g.selectAll("path")
+//          .data(topojson.object(topology, topology.objects.countries)
+//                        .geometries)
+//          .enter()
+//          .append("path")
+//          .attr("d", path)
+//     });
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>   
