--- a/webapp/public/stylesheets/style.css
+++ b/webapp/public/stylesheets/style.css
@@ -1,178 +1,48 @@
 /*
- * Globals
- */
-
-/* Links */
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
-
-/* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: rgb(88,88,88); /* //#333; */
-  text-shadow: none; /* Prevent inheritence from `body` */
-  background-color: #fff;
-  border: 1px solid #fff;
-}
-
-
-/*
  * Base structure
  */
 
 html,
 body {
   height: 100%;
-  background-color: rgb(88,88,88);
-}
-body {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  background-color: rgb(20,20,20);
+  padding-top: 70px;
 }
 
-/* Extra markup and styles for table-esque vertical and horizontal centering */
-.site-wrapper {
-  display: table;
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+.navbar-fixed-top {
+    top: 20px;
 }
-.site-wrapper-inner {
-  display: table-cell;
-  vertical-align: top;
-}
-.cover-container {
-  margin-right: auto;
-  margin-left: auto;
+.navbar-brand {
+    font-size: x-large;
 }
 
-/* Padding for spacing */
-.inner {
-  padding: 30px;
+#navbar {
+    font-size: large;
 }
 
-
-/*
- * Header
- */
-.masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
+.nav>li>a:hover, .nav>li>a:focus{
+    background-color: rgb(20,20,20);
 }
-
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
-}
-
-
-/*
- * Cover
- */
-
-.cover {
-  padding: 0 20px;
-}
-.cover .btn-lg {
-  padding: 10px 20px;
-  font-weight: bold;
-}
-
 
 /*
  * Footer
  */
 
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  text-align: center;
+  vertical-align: middle;
 }
 
 
-/*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
+.container .text-muted {
+  margin: 10px 0;
 }
 
-@media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 1000px;
-  }
-}
-
-/*
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: rgb(88,88,88);
-}
-
-a {
-  color: #00B7FF;
-}
-*/
 
 /* D3.js */
 
@@ -191,3 +61,108 @@ svg {
     pointer-events: all;
 }
   
+
+/* Treemap */
+
+form {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.node {
+  border-bottom: solid 1px black;
+  border-right: solid 1px black;
+  font: 10px sans-serif;
+  line-height: 12px;
+  overflow: hidden;
+  position: absolute;
+  text-indent: 2px;
+}
+
+/*
+ * This product includes color specifications and designs developed by Cynthia
+ * Brewer (http://colorbrewer.org/).
+ */
+
+.YlGnBu .q0-3{background:rgb(237,248,177)}
+.YlGnBu .q1-3{background:rgb(127,205,187)}
+.YlGnBu .q2-3{background:rgb(44,127,184)}
+.YlGnBu .q0-4{background:rgb(255,255,204)}
+.YlGnBu .q1-4{background:rgb(161,218,180)}
+.YlGnBu .q2-4{background:rgb(65,182,196)}
+.YlGnBu .q3-4{background:rgb(34,94,168)}
+.YlGnBu .q0-5{background:rgb(255,255,204)}
+.YlGnBu .q1-5{background:rgb(161,218,180)}
+.YlGnBu .q2-5{background:rgb(65,182,196)}
+.YlGnBu .q3-5{background:rgb(44,127,184)}
+.YlGnBu .q4-5{background:rgb(37,52,148)}
+.YlGnBu .q0-6{background:rgb(255,255,204)}
+.YlGnBu .q1-6{background:rgb(199,233,180)}
+.YlGnBu .q2-6{background:rgb(127,205,187)}
+.YlGnBu .q3-6{background:rgb(65,182,196)}
+.YlGnBu .q4-6{background:rgb(44,127,184)}
+.YlGnBu .q5-6{background:rgb(37,52,148)}
+.YlGnBu .q0-7{background:rgb(255,255,204)}
+.YlGnBu .q1-7{background:rgb(199,233,180)}
+.YlGnBu .q2-7{background:rgb(127,205,187)}
+.YlGnBu .q3-7{background:rgb(65,182,196)}
+.YlGnBu .q4-7{background:rgb(29,145,192)}
+.YlGnBu .q5-7{background:rgb(34,94,168)}
+.YlGnBu .q6-7{background:rgb(12,44,132)}
+.YlGnBu .q0-8{background:rgb(255,255,217)}
+.YlGnBu .q1-8{background:rgb(237,248,177)}
+.YlGnBu .q2-8{background:rgb(199,233,180)}
+.YlGnBu .q3-8{background:rgb(127,205,187)}
+.YlGnBu .q4-8{background:rgb(65,182,196)}
+.YlGnBu .q5-8{background:rgb(29,145,192)}
+.YlGnBu .q6-8{background:rgb(34,94,168)}
+.YlGnBu .q7-8{background:rgb(12,44,132)}
+.YlGnBu .q0-9{background:rgba(255,255,217,0.5)}
+.YlGnBu .q1-9{background:rgba(237,248,177,0.5)}
+.YlGnBu .q2-9{background:rgba(199,233,180,0.5)}
+.YlGnBu .q3-9{background:rgba(127,205,187,0.5)}
+.YlGnBu .q4-9{background:rgba(65,182,196,0.5)}
+.YlGnBu .q5-9{background:rgba(29,145,192,0.5)}
+.YlGnBu .q6-9{background:rgba(34,94,168,0.5)}
+.YlGnBu .q7-9{background:rgba(37,52,148,0.5)}
+.YlGnBu .q8-9{background:rgba(8,29,88,0.5)}
+
+div.tooltip {   
+  position: absolute;           
+  text-align: center;           
+  width: 60px;                  
+  height: 28px;                 
+  padding: 2px;             
+  font: 12px sans-serif;        
+  background: lightsteelblue;   
+  border: 0px;      
+  border-radius: 8px;           
+  pointer-events: none;         
+}
+
+#tooltip {
+    position: absolute;
+    width: 200px;
+    height: auto;
+    padding: 10px;
+    background-color: white;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+    pointer-events: none;
+}
+
+#tooltip.hidden {
+    display: none;
+}
+
+#tooltip p {
+    margin: 0;
+    font-family: sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+}
