--- a/webapp/views/whoviz.jade
+++ b/webapp/views/whoviz.jade
@@ -2,14 +2,13 @@ extends layout
 
 block content
   div.container
-    div.row.row-centered
+    div.row
       div.col-lg-12.col-centered.content-map
+        div#dropDown
         script(type='text/javascript', src='/javascripts/whovizunivariate.js')
-          //form
-          //  label
-          //    input(type='radio', name='mode', value='size', checked)
-          //    | Size
-          //  label
-          //    input(type='radio', name='mode', value='size')
-          //    | Count
+  div.container
+    div.row
+      p#country Country: 
+      p#value Value: 
+
             
