--- a/webapp/public/stylesheets/style.css
+++ b/webapp/public/stylesheets/style.css
@@ -166,3 +166,7 @@ div.tooltip {
     font-size: 16px;
     line-height: 20px;
 }
+
+body > div:nth-child(2) > div > div > div:nth-child(2) > div > label {
+    margin-right: 20px;
+}
