--- a/webapp/public/stylesheets/style.css
+++ b/webapp/public/stylesheets/style.css
@@ -5,7 +5,7 @@
 html,
 body {
   height: 100%;
-  background-color: rgb(20,20,20);
+  background-color: rgb(45,45,45);
   padding-top: 70px;
 }
 
@@ -20,9 +20,19 @@ body {
     font-size: large;
 }
 
-.nav>li>a:hover, .nav>li>a:focus{
-    background-color: rgb(20,20,20);
+a {
+    color: white;
 }
+
+a:hover, a:focus {
+    color: rgb(100,100,100);
+}
+
+.nav>li>a:hover, .nav>li>a:focus{
+    background-color: rgb(45,45,45);
+    color: rgb(100,100,100);
+}
+
 
 /*
  * Footer
@@ -51,11 +61,7 @@ body {
     stroke: #888;
     stroke-linejoin: round;
 }
-svg {
-    //border-style: solid;
-    //border-width: 1px;
-    //border-color: #ccc;
-}
+
 .overlay {
     fill: none;
     pointer-events: all;
@@ -118,15 +124,19 @@ form {
 .YlGnBu .q5-8{background:rgb(29,145,192)}
 .YlGnBu .q6-8{background:rgb(34,94,168)}
 .YlGnBu .q7-8{background:rgb(12,44,132)}
-.YlGnBu .q0-9{background:rgba(255,255,217,0.5)}
-.YlGnBu .q1-9{background:rgba(237,248,177,0.5)}
-.YlGnBu .q2-9{background:rgba(199,233,180,0.5)}
-.YlGnBu .q3-9{background:rgba(127,205,187,0.5)}
-.YlGnBu .q4-9{background:rgba(65,182,196,0.5)}
-.YlGnBu .q5-9{background:rgba(29,145,192,0.5)}
-.YlGnBu .q6-9{background:rgba(34,94,168,0.5)}
-.YlGnBu .q7-9{background:rgba(37,52,148,0.5)}
-.YlGnBu .q8-9{background:rgba(8,29,88,0.5)}
+.YlGnBu .q0-9{background:rgba(255,255,217,0.7)}
+.YlGnBu .q1-9{background:rgba(237,248,177,0.7)}
+.YlGnBu .q2-9{background:rgba(199,233,180,0.7)}
+.YlGnBu .q3-9{background:rgba(127,205,187,0.7)}
+.YlGnBu .q4-9{background:rgba(65,182,196,0.7)}
+.YlGnBu .q5-9{background:rgba(29,145,192,0.7)}
+.YlGnBu .q6-9{background:rgba(34,94,168,0.7)}
+.YlGnBu .q7-9{background:rgba(37,52,148,0.7)}
+.YlGnBu .q8-9{background:rgba(8,29,88,0.7)}
+
+div.information {
+    color: white;
+}
 
 div.tooltip {   
   position: absolute;           
