--- a/webapp/views/who3d.jade
+++ b/webapp/views/who3d.jade
@@ -6,6 +6,6 @@ block content
       div#map.col-lg-6
         script(type='text/javascript', src='/javascripts/who3d.js')
       div.col-lg-6
-        div.ui-widget
-          label(for='tags') Country
-          input#tags
+        div#dropDown
+        br
+        div#info
