update of the views

--- a/webapp/views/layout.jade
+++ b/webapp/views/layout.jade
@@ -11,14 +11,14 @@ html
     nav.navbar.navbar-fixed-top
       div.container
         div.navbar-header
-          a(href='#', class='navbar-brand') WHO Visualization
+          a(href='/', class='navbar-brand') WHO Visualization
         nav
         div#navbar(class='collapse navbar-collapse pull-right')
           ul.nav.navbar-nav
-              li: a(href='#') Home
-              //- To implement
-              li: a(href='/whoviz/') Visualization 
+              li: a(href='/whoviz/') Tree Map
+              li: a(href='/heatmap') Heat Map
               li: a(href='/who3d/') Fact sheets
+              //- To implement
               li: a(href='#') Gamification
                   
     div
