--- a/webapp/views/heatmap.jade
+++ b/webapp/views/heatmap.jade
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-  div.container
+  div.container-fluid
     div.row
       div.col-lg-12.col-centered.content-heatmap
         script(type='text/javascript', src='/javascripts/whovizbivariate.js')
 
-            
