--- a/webapp/views/index.jade
+++ b/webapp/views/index.jade
@@ -1,6 +1,45 @@
-extends layout
+doctype html
+html 
+  head
+    title= title
+    link(href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css', rel='stylesheet')
+    link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js',charset='utf-8')
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js')
 
-block content
-  h1.cover-heading= title
-  p Welcome to #{title}
+  body.background-body
+    nav.navbar.navbar-fixed-top
+      div.container
+        div.navbar-header
+          a(href='/', class='navbar-brand') WHO Visualization
+        nav
+        div#navbar(class='collapse navbar-collapse pull-right')
+          ul.nav.navbar-nav
+              li: a(href='/whoviz/') Tree Map
+              li: a(href='/heatmap') Heat Map
+              li: a(href='/who3d/') Fact sheets
+              //- To implement
+              li: a(href='#') Gamification
+          
+      div.container
+        div.row
+          div.col-md-6.col-md-offset-3.col-centered-boxed
+            h2 Explore the WHO dataset:
+            a(href='/whoviz') One dimension at a time 
+            br
+            a(href='/heatmap') Two dimension at a time
+            br
+            a(href='/who3d') Get some facts
+            br
+            
+    div.footer
+      div.container
+        div.row
+          p.text-muted Created by Cedric
+          p: a(href='https://github.com/Milt0n/WHOVisualization') Sauce
+  
+    script(src='https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.19/topojson.min.js')
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js')
+
   
